--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -38,7 +38,7 @@ parent: app(HDM)
         <li><a download href="/assets/app-hdm/add-on/FT200/DM22007-AKC_160-162_.Signed.FT200.dlkAddon">160-162</a></li>
         <li><a download href="/assets/app-hdm/add-on/FT200/DM22007-AKC_178-180_.Signed.FT200.dlkAddon">178-180</a></li>
         <li><a download href="/assets/app-hdm/add-on/FT200/DM22007-AlrmPrem_AKC151-153 FT200 V2.Signed.FT200.dlkAddon">151-153</a></li>
-        <li><a download href="/assets/app-hdm/add-on/FT200/DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 172.dlkAddon">172-174(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="/assets/app-hdm/add-on/FT200/DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 172.dlkAddon">172-174(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22015-AlmPrem FT200DualAnt.Signed.FT200.000 172.dlkAddon">172-174(DM22015)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 172.dlkAddon">172-174(DM22005)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 430.dlkAddon">430-432</a></li>
@@ -51,7 +51,7 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 634_corrected.dlkAddon">634-636</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 640.dlkAddon">640-642</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 643.dlkAddon">643-645</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 622.dlkAddon">622-624(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 622.dlkAddon">622-624(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 163.dlkAddon">163-165</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 439.dlkAddon">439-441</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 442.dlkAddon">442-444</a></li>
@@ -79,10 +79,10 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 919.dlkAddon">919-921</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 925.dlkAddon">925-927</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 934.dlkAddon">934-936</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 892.dlkAddon">892-894(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 892.dlkAddon">892-894(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 922.dlkAddon">922-924</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 901.dlkAddon">901-903</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 928.dlkAddon">928-930(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 928.dlkAddon">928-930(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 688.dlkAddon">688-690</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 931.dlkAddon">931-933</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 201.dlkAddon">001 201-001 203</a></li>
@@ -90,12 +90,12 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 216.dlkAddon">001 216-001 218(报警+'1|3')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 219.dlkAddon">001 219-001 221</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 222.dlkAddon">001 222-001 224</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 228.dlkAddon">001 228-001 230(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 228.dlkAddon">001 228-001 230(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 228.dlkAddon">001 228-001 230(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 207.dlkAddon">001 207-001 209</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 213.dlkAddon">001 213-001 215</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警+'1|3')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 312.dlkAddon">001 312-001 314</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 324.dlkAddon">001 324-001 326</a></li>
@@ -103,17 +103,17 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 330.dlkAddon">001 330-001 332</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 339.dlkAddon">001 339-001 341</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 519.dlkAddon">001 519-001 521</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 336.dlkAddon">001 336-001 338(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 336.dlkAddon">001 336-001 338(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22014-Dual Antenna.Signed.FT200.001 336.dlkAddon">001 336-001 338('2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 321.dlkAddon">001 321-001 323(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 504.dlkAddon">001/504 505 506(报警+'1|3')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 504.dlkAddon">001/504 505 506(报警+'2|2')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 204.dlkAddon">001 204-001 206(报警+'2|2')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 333.dlkAddon">001 333-001 335(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 504.dlkAddon">001/504 505 506(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 204.dlkAddon">001 204-001 206(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 333.dlkAddon">001 333-001 335(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 318.dlkAddon">001 318-001 320(报警)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 531.dlkAddon">001 531-001 533(报警+'2|2')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 342.dlkAddon">001 342-001 344(报警+'2|2')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 528.dlkAddon">001/528 529 530(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 531.dlkAddon">001 531-001 533(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 342.dlkAddon">001 342-001 344(报警+'2|2')</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 528.dlkAddon">001/528 529 530(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 525.dlkAddon">001/525 526 527(报警)</a></li>
 
     </ul>
